feat: add expenses module and fix security definer view

--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "harmonic-halo",
   "version": "0.1.0",
   "private": true,
+  "main": "electron/main.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "build:desktop": "cross-env NEXT_PUBLIC_IS_DESKTOP=true next build && electron-builder",
+    "dev:electron": "cross-env NEXT_PUBLIC_IS_DESKTOP=true next dev"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.15.0",
@@ -29,9 +32,27 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^10.1.0",
+    "electron": "^39.2.7",
+    "electron-builder": "^26.0.12",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "build": {
+    "appId": "com.konta.app",
+    "productName": "KONTA",
+    "win": {
+      "target": "nsis"
+    },
+    "files": [
+      "out/**/*",
+      "electron/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "output": "dist"
+    }
   }
 }
